[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=1]
[ext_resource path="res://src/UI/Components/ConfirmationPopup.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/stylebox/panel_popup.tres" type="StyleBox" id=3]

[node name="ConfirmationPopup" type="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -100.0
margin_right = 192.0
margin_bottom = 100.0
grow_vertical = 2
rect_min_size = Vector2( 384, 200 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
text = "Confirm?"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.0
margin_top = -54.0
margin_right = 157.0
margin_bottom = -23.0
text = "Confirm?"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -7.0
margin_right = -8.0
margin_bottom = 53.0
rect_min_size = Vector2( 120, 60 )
focus_neighbour_left = NodePath("../NoButton")
focus_neighbour_top = NodePath("../NoButton")
focus_neighbour_right = NodePath("../NoButton")
focus_neighbour_bottom = NodePath("../NoButton")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("../NoButton")
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -7.0
margin_right = 128.0
margin_bottom = 53.0
rect_min_size = Vector2( 120, 60 )
focus_neighbour_left = NodePath("../YesButton")
focus_neighbour_top = NodePath("../YesButton")
focus_neighbour_right = NodePath("../YesButton")
focus_neighbour_bottom = NodePath("../YesButton")
focus_next = NodePath("../YesButton")
focus_previous = NodePath("../YesButton")
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="NoButton" to="." method="_on_NoButton_pressed"]
